--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0",
     "typescript": "~4.3.5"
   },
   "private": true
