--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "expo": "~44.0.2",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
