--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
@@ -20,6 +25,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
