--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
