--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.0",
@@ -34,14 +35,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.4.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "axios-mock-adapter": "^1.20.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.4.7",
+    "jest-expo": "^44.0.1",
+    "jest-styled-components": "^7.0.8",
+    "ts-jest": "^27.1.2",
     "typescript": "~4.3.5"
   },
   "private": true
