--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
+    "startrn": "react-native start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
